--- a/css/ui.scss
+++ b/css/ui.scss
@@ -1204,6 +1204,110 @@
       color:#777;
     }
   }
+  /* esg 경영목표 */
+  &.goal{
+    position: relative;
+    padding-bottom:get-vw(77px);
+    &::before{
+      content:'';
+      display: block;
+      position: absolute;
+      bottom:get-vw(35px);
+      left:50%;
+      transform: translateX(-50%);
+      width:1px;
+      height:get-vw(40px);
+      background: #E8E8E8;
+      z-index: -1;
+    }
+    &::after{
+      content:'';
+      display: block;
+      position: absolute;
+      bottom:0;
+      left:50%;
+      transform: translateX(-50%);
+      width:get-vw(37px);
+      height:get-vw(37px);
+      background:url("../images/ico_arrow_o_down.png") no-repeat 50% 50%;
+      background-size: cover;
+    }
+    li{
+      position: relative;
+      &::after{
+        content:'';
+        display: block;
+        position: absolute;
+        bottom:0;
+        left:50%;
+        transform: translateX(-50%) translateY(50%);
+        width:get-vw(7px);
+        height:get-vw(7px);
+        background: #ABABAB;
+        border-radius:50%;
+      }
+      & + li::before{
+        content:'';
+        display: block;
+        position: absolute;
+        top:get-vw(-10px);
+        left:50%;
+        transform: translateX(-50%);
+        width:1px;
+        height:get-vw(10px);
+        background: #E8E8E8;
+        z-index: -1;
+      }
+    }
+  }
+}
+.esg-reflection{
+  position: relative;
+  padding:0 get-vw(24px);
+  text-align: center;
+  &::before{
+    content: '';
+    display: block;
+    position: absolute;
+    top:get-vw(256px);
+    bottom:0;
+    left:0;
+    right:0;
+    background: url("../images/bg_vision_mo.png") no-repeat 50% 50%;
+    background-size: cover;
+    z-index: -1;
+  }
+  .cont_tit{
+    font-weight:700;
+    font-size:get-vw(22px);
+    color:#00498C;
+  }
+  .ak-value-list{
+    li{
+      .inner{
+        border:none;
+        background: rgba(0, 69, 135, 0.85);
+        backdrop-filter: blur(20px);
+        color:#FFFFFF;
+        .desc{
+          color:#FFFFFF;
+        }
+      }
+    }
+  }
+  .tk-arboria{
+    margin-top:get-vw(40px);
+    padding-bottom:get-vw(56px);
+    font-weight:300;
+    font-size:get-vw(52px);
+    line-height:1;
+    color:#FFFFFF;
+    em{
+      font-family: "arboria",sans-serif;
+      font-size:get-vw(52px);
+      font-weight:700;
+    }
+  }
 }
 @media all and (min-width: 961px) {
   .quotes{
@@ -1233,6 +1337,74 @@
       .desc{
         margin-top:8px;
         font-size:16px;
+      }
+    }
+    /* esg 경영목표 */
+    &.goal{
+      position: relative;
+      padding-bottom:142px;
+      &::before{
+        content:'';
+        bottom:0;
+        left:50%;
+        transform:translateX(-50%);
+        width:100%;
+        height:161px;
+        background: url("../images/img_diagram_arrow.png") no-repeat 50% 100%;
+        z-index:1;
+      }
+      &::after{
+        content:none;
+      }
+      li{
+        position: relative;
+        &::after{
+          content:none;
+        }
+        & + li::before{
+          content:none;
+        }
+      }
+    }
+  }
+  .esg-reflection{
+    position: relative;
+    width:100%;
+    margin:-107px auto 0;
+    padding:0;
+    text-align: center;
+    &::before{
+      content: '';
+      display: block;
+      position: absolute;
+      top:auto;
+      bottom:0;
+      left:0;
+      right:0;
+      width:1920px;
+      height:448px;
+      background: url("../images/bg_vision_pc.png") no-repeat 50% 50%;
+      background-size: cover;
+      z-index: -1;
+    }
+    .cont_tit{
+      font-size:32px;
+    }
+    .ak-value-list{
+      width:1200px;
+      margin:0 auto;
+    }
+    .tk-arboria{
+      margin-top:80px;
+      padding-bottom:96px;
+      font-weight:300;
+      font-size:74px;
+      line-height:1;
+      color:#FFFFFF;
+      em{
+        font-family: "arboria",sans-serif;
+        font-size:inherit;
+        font-weight:700;
       }
     }
   }
