--- a/css/ui.scss
+++ b/css/ui.scss
@@ -2029,6 +2029,7 @@
   }
 }
 .tbl-scrollable{
+  position: relative;
   overflow-x:scroll;
   width:100%;
   .tbl-governance{
@@ -2083,6 +2084,19 @@
   & + .cont_tit{
     margin-top:get-vw(50px);
     margin-bottom:get-vw(20px);
+  }
+  .drag-noti{
+    display:block;
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translateY(-50%) translateX(-50%);
+    width:get-vw(120px);
+    height:get-vw(120px);
+    img{
+      width:100%;
+      height:100%;
+    }
   }
 }
 .notice-list{
