--- a/css/ui.scss
+++ b/css/ui.scss
@@ -2226,6 +2226,9 @@
       margin-top:100px;
       margin-bottom:40px;
     }
+    .drag-noti{
+      display:none;
+    }
   }
   .notice-list{
     margin-top:20px;
