--- a/css/ui.scss
+++ b/css/ui.scss
@@ -203,7 +203,7 @@
               position: relative;
               a {
                 font-weight: 700;
-                &::after {
+                &::before {
                   content: '';
                   position: absolute;
                   left: 0;
@@ -221,7 +221,7 @@
                 background-color: #00498C;
                 font-weight: 400;
                 &::after{
-                  display: none;
+                  content: none;
                 }
               }
             }
