--- a/css/ui.scss
+++ b/css/ui.scss
@@ -971,6 +971,7 @@
   padding-bottom:get-vw(50px);
   .visual{
     height: get-vw(400px);
+    background-image:url(../images/img_core_value_m.png);
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size:cover;
@@ -1080,6 +1081,7 @@
     padding-bottom:100px;
     .visual{
       height: 600px;
+      background-image:url(../images/img_core_value.png);
       .tit{
         display:block;
         padding-top: 80px;
