--- a/css/font.scss
+++ b/css/font.scss
@@ -32,6 +32,7 @@
 @font-face {
   font-family:'SpoqaHanSansNeo';
   font-style:normal;
+  font-display:auto;
   font-weight:300;
   src:url(../font/SpoqaHanSansNeo-Light.eot);
   src:url(../font/SpoqaHanSansNeo-Light.eot?#iefix) format('embedded-opentype'),
@@ -41,6 +42,7 @@
 @font-face {
   font-family:'SpoqaHanSansNeo';
   font-style:normal;
+  font-display:auto;
   font-weight:400;
   src:url(../font/SpoqaHanSansNeo-Regular.eot);
   src:url(../font/SpoqaHanSansNeo-Regular.eot?#iefix) format('embedded-opentype'),
@@ -50,6 +52,7 @@
 @font-face {
   font-family:'SpoqaHanSansNeo';
   font-style:normal;
+  font-display:auto;
   font-weight:500;
   src:url(../font/SpoqaHanSansNeo-Medium.eot);
   src:url(../font/SpoqaHanSansNeo-Medium.eot?#iefix) format('embedded-opentype'),
@@ -59,6 +62,7 @@
 @font-face {
   font-family:'SpoqaHanSansNeo';
   font-style:normal;
+  font-display:auto;
   font-weight:700;
   src:url(../font/SpoqaHanSansNeo-Bold.eot);
   src:url(../font/SpoqaHanSansNeo-Bold.eot?#iefix) format('embedded-opentype'),
