--- a/css/ui.scss
+++ b/css/ui.scss
@@ -178,6 +178,7 @@
         background-position:50% 50%;
       }
       &.has-tab{
+        margin-bottom:38px;
         &::after{
           content:'';
           display:block;
