--- a/css/style.css
+++ b/css/style.css
@@ -236,9 +236,7 @@ caption {
   font-family: "arboria", sans-serif;
 }
 
-/* variables */
-/* Layout Style*/
-/* UI Style(Button, Form, Dialogs */
+/* variables */ /* Layout Style*/ /* UI Style(Button, Form, Dialogs */
 .blind {
   overflow: hidden;
   position: absolute;
@@ -374,12 +372,10 @@ caption {
   .mo {
     display: none;
   }
-
   .content, .topArea {
     max-width: 2560px;
     margin: 0 auto;
   }
-
   .topArea {
     padding-top: 36px;
   }
@@ -468,7 +464,6 @@ caption {
     background-color: #00498C;
     color: #fff;
   }
-
   .cont {
     margin: 0 auto;
   }
@@ -562,7 +557,7 @@ caption {
 .bbs_sort .bbs_sortList li + li {
   margin-top: 2.7777777778vw;
 }
-.bbs_sort .bbs_sortList li.active a {
+.bbs_sort .bbs_sortList li.active a, .bbs_sort .bbs_sortList li a:hover {
   font-weight: 700;
   color: #43C9FB;
 }
@@ -572,6 +567,7 @@ caption {
   width: 6.6666666667vw;
   height: 6.6666666667vw;
   background: url("../images/ico_search.png") no-repeat 50% 50%;
+  background-size: cover;
 }
 
 .search-input {
@@ -629,6 +625,7 @@ caption {
   height: 85px;
   border-bottom: 1px solid #E8E8E8;
   vertical-align: middle;
+  color: #777777;
   text-align: center;
   font-weight: 400;
   line-height: 1.5;
@@ -667,7 +664,6 @@ caption {
     width: 220px;
     margin-left: 6px;
   }
-
   .bbs_sort .bbs_button {
     height: 44px;
     font-size: 16px;
@@ -686,17 +682,19 @@ caption {
   .bbs_sort .bbs_sortList li + li {
     margin-top: 10px;
   }
-
   .btn-search {
     width: 24px;
     height: 24px;
   }
-
   .search-input {
     padding-right: 24px;
   }
   .search-input input {
     font-size: 16px;
+  }
+  .search-input input::placeholder {
+    color: #0D0D0D;
+    opacity: 0.25;
   }
 }
 /* 페이징 */
@@ -868,9 +866,12 @@ caption {
   background: #00498C;
   text-align: center;
   line-height: 14.4444444444vw;
+  font-weight: 700;
 }
 .btn-p span {
   color: #FFFFFF;
+  font-size: inherit;
+  font-weight: inherit;
 }
 
 @media all and (min-width: 961px) {
@@ -888,8 +889,8 @@ caption {
   }
   .bbs_detail .bbs-view-content {
     padding: 60px 0 60px;
+    font-size: 18px;
   }
-
   .bbs-more li {
     display: flex;
     justify-content: left;
@@ -904,22 +905,27 @@ caption {
     display: inline-block;
     flex-shrink: 0;
     width: 120px;
+    color: #777777;
     text-align: center;
+  }
+  .bbs-more li a {
+    font-size: 18px;
   }
   .bbs-more li::after {
     width: 16px;
     height: 16px;
     right: 30px;
   }
-
   .btn-area {
     margin-top: 50px;
   }
-
   .btn-p {
     width: 312px;
     height: 60px;
     line-height: 60px;
+  }
+  .btn-p span {
+    font-size: 17px;
   }
 }
 /* 다운로드 리스트 */
@@ -991,6 +997,16 @@ caption {
   .download-list li + li {
     margin-top: 0;
   }
+  .download-list li:hover {
+    padding: 15px;
+  }
+  .download-list li:hover a {
+    border: 2px solid #08A2DC;
+  }
+  .download-list li:hover a .btn-download {
+    color: #08A2DC;
+    font-weight: 700;
+  }
   .download-list li .inner {
     position: relative;
     height: 276px;
@@ -999,13 +1015,6 @@ caption {
   .download-list li .inner:after {
     width: 160px;
     height: 170px;
-  }
-  .download-list li .inner:hover {
-    border: 1px solid #08A2DC;
-  }
-  .download-list li .inner:hover .btn-download {
-    color: #08A2DC;
-    font-weight: 700;
   }
   .download-list li .number {
     margin-bottom: 5px;
@@ -1019,7 +1028,6 @@ caption {
     bottom: 32px;
     left: 36px;
   }
-
   .btn-download {
     height: 24px;
     font-size: 14px;
@@ -1102,6 +1110,10 @@ caption {
 .tbl-finance-wrap .tbl-finance th, .tbl-finance-wrap .tbl-finance td {
   padding: 4.1666666667vw 4.4444444444vw;
   border-bottom: 1px solid #E8E8E8;
+  color: #0D0D0D;
+}
+.tbl-finance-wrap .tbl-finance th.txtc-skyblue, .tbl-finance-wrap .tbl-finance td.txtc-skyblue {
+  color: #08A2DC;
 }
 .tbl-finance-wrap .tbl-finance th {
   text-align: left;
@@ -1109,12 +1121,16 @@ caption {
 .tbl-finance-wrap .tbl-finance td {
   text-align: right;
 }
-.tbl-finance-wrap .tbl-finance tfoot th, .tbl-finance-wrap .tbl-finance tfoot td {
+.tbl-finance-wrap .tbl-finance tfoot th, .tbl-finance-wrap .tbl-finance tfoot td, .tbl-finance-wrap .tbl-finance thead th, .tbl-finance-wrap .tbl-finance thead td {
   background: rgba(239, 246, 252, 0.5);
+  font-weight: 700;
 }
-.tbl-finance-wrap .tbl-finance tfoot .total th, .tbl-finance-wrap .tbl-finance tfoot .total td {
+.tbl-finance-wrap .tbl-finance tfoot .total th, .tbl-finance-wrap .tbl-finance tfoot .total td, .tbl-finance-wrap .tbl-finance thead .total th, .tbl-finance-wrap .tbl-finance thead .total td {
   background: rgb(0, 73, 140);
   color: #FFF;
+}
+.tbl-finance-wrap .tbl-finance tfoot .total th.txtc-skyblue, .tbl-finance-wrap .tbl-finance tfoot .total td.txtc-skyblue, .tbl-finance-wrap .tbl-finance thead .total th.txtc-skyblue, .tbl-finance-wrap .tbl-finance thead .total td.txtc-skyblue {
+  color: #8CE0FF;
 }
 
 @media all and (min-width: 961px) {
@@ -1132,7 +1148,6 @@ caption {
     width: 16px;
     height: 16px;
   }
-
   .tbl-title-area {
     margin-bottom: 12px;
   }
@@ -1143,7 +1158,6 @@ caption {
     top: 24px;
     font-size: 14px;
   }
-
   .tbl-finance-wrap + .tbl-title-area {
     margin-top: 100px;
   }
@@ -1292,7 +1306,6 @@ caption {
     width: 100%;
     height: auto;
   }
-
   .core-value {
     padding-bottom: 100px;
   }
@@ -1536,11 +1549,9 @@ caption {
   .quotes img {
     width: 17px;
   }
-
   .sub-desc {
     font-size: 24px;
   }
-
   .ak-value-list {
     display: flex;
     margin: 25px -15px;
@@ -1589,9 +1600,9 @@ caption {
   .ak-value-list.goal li + li::before {
     content: none;
   }
-
   .esg-reflection {
     position: relative;
+    overflow: hidden;
     width: 100%;
     margin: -107px auto 0;
     padding: 0;
@@ -1616,7 +1627,7 @@ caption {
   }
   .esg-reflection .ak-value-list {
     width: 1200px;
-    margin: 0 auto;
+    margin: 25px auto 0;
   }
   .esg-reflection .tk-arboria {
     margin-top: 80px;
@@ -2004,7 +2015,6 @@ caption {
     width: 92px;
     border-top: 1px solid #0D0D0D;
   }
-
   .message-list {
     padding: 100px 0;
     margin-top: 114px;
@@ -2058,7 +2068,6 @@ caption {
     color: #454545;
     word-break: keep-all;
   }
-
   .catchphrase {
     padding: 100px 0;
   }
@@ -2401,7 +2410,6 @@ caption {
   .tbl-title-area + .tbl-scrollable {
     padding-top: 6px;
   }
-
   .tbl-scrollable {
     overflow-x: auto;
     width: 100%;
@@ -2431,7 +2439,6 @@ caption {
   .tbl-scrollable .drag-noti {
     display: none;
   }
-
   .notice-list {
     margin-top: 20px;
     font-size: 14px;
@@ -2440,7 +2447,6 @@ caption {
     padding-left: 34px;
     text-indent: -34px;
   }
-
   .bod-composition {
     padding: 100px 0 80px;
     background: #EFF6FC;
