--- a/css/style.css
+++ b/css/style.css
@@ -562,7 +562,7 @@ caption {
 .bbs_sort .bbs_sortList li + li {
   margin-top: 2.7777777778vw;
 }
-.bbs_sort .bbs_sortList li.active a {
+.bbs_sort .bbs_sortList li.active a, .bbs_sort .bbs_sortList li a:hover {
   font-weight: 700;
   color: #43C9FB;
 }
@@ -572,6 +572,7 @@ caption {
   width: 6.6666666667vw;
   height: 6.6666666667vw;
   background: url("../images/ico_search.png") no-repeat 50% 50%;
+  background-size: cover;
 }
 
 .search-input {
@@ -629,6 +630,7 @@ caption {
   height: 85px;
   border-bottom: 1px solid #E8E8E8;
   vertical-align: middle;
+  color: #777777;
   text-align: center;
   font-weight: 400;
   line-height: 1.5;
@@ -697,6 +699,10 @@ caption {
   }
   .search-input input {
     font-size: 16px;
+  }
+  .search-input input::placeholder {
+    color: #0D0D0D;
+    opacity: 0.25;
   }
 }
 /* 페이징 */
@@ -868,9 +874,12 @@ caption {
   background: #00498C;
   text-align: center;
   line-height: 14.4444444444vw;
+  font-weight: 700;
 }
 .btn-p span {
   color: #FFFFFF;
+  font-size: inherit;
+  font-weight: inherit;
 }
 
 @media all and (min-width: 961px) {
@@ -888,6 +897,7 @@ caption {
   }
   .bbs_detail .bbs-view-content {
     padding: 60px 0 60px;
+    font-size: 18px;
   }
 
   .bbs-more li {
@@ -904,7 +914,11 @@ caption {
     display: inline-block;
     flex-shrink: 0;
     width: 120px;
+    color: #777777;
     text-align: center;
+  }
+  .bbs-more li a {
+    font-size: 18px;
   }
   .bbs-more li::after {
     width: 16px;
@@ -920,6 +934,9 @@ caption {
     width: 312px;
     height: 60px;
     line-height: 60px;
+  }
+  .btn-p span {
+    font-size: 17px;
   }
 }
 /* 다운로드 리스트 */
@@ -991,6 +1008,16 @@ caption {
   .download-list li + li {
     margin-top: 0;
   }
+  .download-list li:hover {
+    padding: 15px;
+  }
+  .download-list li:hover a {
+    border: 2px solid #08A2DC;
+  }
+  .download-list li:hover a .btn-download {
+    color: #08A2DC;
+    font-weight: 700;
+  }
   .download-list li .inner {
     position: relative;
     height: 276px;
@@ -999,13 +1026,6 @@ caption {
   .download-list li .inner:after {
     width: 160px;
     height: 170px;
-  }
-  .download-list li .inner:hover {
-    border: 1px solid #08A2DC;
-  }
-  .download-list li .inner:hover .btn-download {
-    color: #08A2DC;
-    font-weight: 700;
   }
   .download-list li .number {
     margin-bottom: 5px;
@@ -1102,6 +1122,10 @@ caption {
 .tbl-finance-wrap .tbl-finance th, .tbl-finance-wrap .tbl-finance td {
   padding: 4.1666666667vw 4.4444444444vw;
   border-bottom: 1px solid #E8E8E8;
+  color: #0D0D0D;
+}
+.tbl-finance-wrap .tbl-finance th.txtc-skyblue, .tbl-finance-wrap .tbl-finance td.txtc-skyblue {
+  color: #08A2DC;
 }
 .tbl-finance-wrap .tbl-finance th {
   text-align: left;
@@ -1109,12 +1133,16 @@ caption {
 .tbl-finance-wrap .tbl-finance td {
   text-align: right;
 }
-.tbl-finance-wrap .tbl-finance tfoot th, .tbl-finance-wrap .tbl-finance tfoot td {
+.tbl-finance-wrap .tbl-finance tfoot th, .tbl-finance-wrap .tbl-finance tfoot td, .tbl-finance-wrap .tbl-finance thead th, .tbl-finance-wrap .tbl-finance thead td {
   background: rgba(239, 246, 252, 0.5);
+  font-weight: 700;
 }
-.tbl-finance-wrap .tbl-finance tfoot .total th, .tbl-finance-wrap .tbl-finance tfoot .total td {
+.tbl-finance-wrap .tbl-finance tfoot .total th, .tbl-finance-wrap .tbl-finance tfoot .total td, .tbl-finance-wrap .tbl-finance thead .total th, .tbl-finance-wrap .tbl-finance thead .total td {
   background: rgb(0, 73, 140);
   color: #FFF;
+}
+.tbl-finance-wrap .tbl-finance tfoot .total th.txtc-skyblue, .tbl-finance-wrap .tbl-finance tfoot .total td.txtc-skyblue, .tbl-finance-wrap .tbl-finance thead .total th.txtc-skyblue, .tbl-finance-wrap .tbl-finance thead .total td.txtc-skyblue {
+  color: #8CE0FF;
 }
 
 @media all and (min-width: 961px) {
@@ -1592,6 +1620,7 @@ caption {
 
   .esg-reflection {
     position: relative;
+    overflow: hidden;
     width: 100%;
     margin: -107px auto 0;
     padding: 0;
@@ -1616,7 +1645,7 @@ caption {
   }
   .esg-reflection .ak-value-list {
     width: 1200px;
-    margin: 0 auto;
+    margin: 25px auto 0;
   }
   .esg-reflection .tk-arboria {
     margin-top: 80px;
@@ -2981,10 +3010,310 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
     text-decoration: underline;
   }
 }
-main {
+main h2 {
+  font-size: 10.5555555556vw;
+  font-weight: 700;
+  letter-spacing: 0.01em;
+  color: #fff;
+}
+main h3 {
+  font-weight: 300;
+  font-size: 6.1111111111vw;
+  line-height: 8.8888888889vw;
+  letter-spacing: -0.03em;
+  color: #0D0D0D;
+}
+main .top-visual {
+  position: relative;
   height: 100vh;
 }
+main .top-visual .video-box {
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  position: absolute;
+}
+main .top-visual .video-box.pc {
+  display: none;
+}
+main .top-visual .video-box.mo {
+  display: block;
+}
+main .top-visual .video-box video {
+  z-index: -1;
+  width: 100vw;
+  position: absolute;
+}
+main .top-visual .typo-box {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  line-height: 9.4444444444vw;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+main .top-visual .typo-box div {
+  font-size: 6.6666666667vw;
+  font-weight: 300;
+  letter-spacing: -0.02em;
+  color: #fff;
+  text-align: center;
+}
+main .top-visual .typo-box div p {
+  margin-top: 4.1666666667vw;
+}
+main .top-visual .typo-box div strong {
+  font-size: 6.6666666667vw;
+  font-weight: 700;
+  letter-spacing: -0.04em;
+}
+main .top-visual .btn-scroll-down {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 5.5555555556vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #fff;
+}
+main .top-visual .btn-scroll-down:after {
+  content: "";
+  display: block;
+  width: 4.4444444444vw;
+  height: 4.4444444444vw;
+  margin-top: 2.7777777778vw;
+  background: url(../images/ico_scroll_down.png) no-repeat center center;
+  background-size: 4.4444444444vw;
+  animation: move 1s linear infinite;
+}
+@keyframes move {
+  0% {
+    -webkit-transform: translateY(0);
+  }
+  50% {
+    -webkit-transform: translateY(10px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+  }
+}
+main .news-room .news-top {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 105.5555555556vw;
+  background: url(../images/bg_main_newsroom.png) no-repeat center center;
+  background-size: cover;
+}
+main .news-room .news-top h2 {
+  padding-bottom: 13.8888888889vw;
+}
+main .news-room .news-top .btn-box {
+  position: absolute;
+  left: 0;
+  bottom: 7.7777777778vw;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100vw;
+  padding: 0 6.6666666667vw;
+}
+main .news-room .news-top .btn-box h3 {
+  width: 100%;
+  margin-right: 4.1666666667vw;
+  box-sizing: border-box;
+}
+main .news-room .news-top .btn-box h3:last-child {
+  margin-right: 0;
+}
+main .news-room .news-top .btn-box h3 a {
+  display: inline-block;
+  width: 100%;
+  padding-top: 1.6666666667vw;
+  border-top: 1px solid #fff;
+  font-size: 4.1666666667vw;
+  font-weight: 700;
+  color: #fff;
+  background: url(../images/ico_arrow_right_white.png) no-repeat right center;
+  background-size: 2.1166666667vw;
+}
+main .news-room .ak-news-list {
+  padding: 12.5vw 6.6666666667vw 15vw;
+}
+main .news-room .ak-news-list ul {
+  margin-top: 1.1111111111vw;
+}
+main .news-room .ak-news-list ul li {
+  position: relative;
+  width: 100%;
+  height: 87.5vw;
+  margin-top: 5.5555555556vw;
+  background: url(../images/bg_main_newslist01.png) no-repeat center center;
+  background-size: 100% 100%;
+}
+main .news-room .ak-news-list ul li a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+main .news-room .ak-news-list ul li a div {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: calc(100% - 7.7777777778vw);
+  padding: 6.1111111111vw 0 0 6.1111111111vw;
+  background: #fff;
+  box-sizing: border-box;
+}
+main .news-room .ak-news-list ul li a div h4 {
+  font-weight: 500;
+  font-size: 3.6111111111vw;
+  line-height: 5.5555555556vw;
+  color: #00498C;
+}
+main .news-room .ak-news-list ul li a div .con {
+  margin-top: 4.1666666667vw;
+  font-weight: 400;
+  font-size: 4.4444444444vw;
+  line-height: 7.2222222222vw;
+  color: #0D0D0D;
+}
+main .news-room .ak-news-list ul li a div .date {
+  margin-top: 1.3888888889vw;
+  font-weight: 400;
+  font-size: 3.6111111111vw;
+  line-height: 6.1111111111vw;
+  letter-spacing: -0.02em;
+  color: #ABABAB;
+}
+main .news-room .ak-news-list ul li:nth-child(2) {
+  background: url(../images/bg_main_newslist02.png) no-repeat center center;
+  background-size: 100% 100%;
+}
+main .esg .esg-top {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 105.5555555556vw;
+  background: url(../images/bg_main.esg.png) no-repeat center center;
+  background-size: cover;
+}
+main .esg .esg-top h2 {
+  padding-bottom: 13.8888888889vw;
+}
+main .esg .esg-top .btn-box {
+  position: absolute;
+  left: 0;
+  bottom: 7.7777777778vw;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100vw;
+  padding: 0 6.6666666667vw;
+}
+main .esg .esg-top .btn-box h3 {
+  width: calc(50% - 4.1666666667vw);
+  margin-right: 4.1666666667vw;
+  box-sizing: content-box;
+}
+main .esg .esg-top .btn-box h3:nth-child(2n) {
+  margin-right: 0;
+}
+main .esg .esg-top .btn-box h3 a {
+  display: inline-block;
+  width: 100%;
+  padding-top: 1.6666666667vw;
+  border-top: 1px solid #fff;
+  font-size: 4.1666666667vw;
+  font-weight: 700;
+  color: #fff;
+  background: url(../images/ico_arrow_right_white.png) no-repeat right center;
+  background-size: 2.1166666667vw;
+}
+main .esg .esg-list ul li {
+  position: relative;
+  width: 100%;
+  height: 100vw;
+  background: url(../images/bg_main_esg_list02.png) no-repeat center center;
+  background-size: cover;
+}
+main .esg .esg-list ul li:first-child {
+  background: none;
+  height: 110.2777777778vw;
+}
+main .esg .esg-list ul li a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: 9.7222222222vw 6.6666666667vw;
+}
+main .esg .esg-list ul li a div h4 {
+  font-weight: 500;
+  font-size: 3.6111111111vw;
+  line-height: 5.5555555556vw;
+  color: #00498C;
+}
+main .esg .esg-list ul li a div .con {
+  margin-top: 2.7777777778vw;
+  font-weight: 300;
+  font-size: 6.1111111111vw;
+  line-height: 8.8888888889vw;
+  letter-spacing: -0.03em;
+  color: #0D0D0D;
+}
+main .esg .esg-list ul li a div .img {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  width: 100%;
+  min-height: 44.4444444444vw;
+}
+main .esg .esg-list ul li a div .img:before {
+  content: "";
+  width: 11.1111111111vw;
+  height: 2.7777777778vw;
+  background: url(../images/ico_main_list_arrow.png) no-repeat center center;
+  background-size: 11.1111111111vw;
+}
+main .esg .esg-list ul li a div .img img {
+  width: 67.7777777778vw;
+  height: auto;
+}
 
+@media all and (min-width: 961px) {
+  main .top-visual .video-box.pc {
+    display: block;
+  }
+  main .top-visual .video-box.mo {
+    display: none;
+  }
+}
+@media screen and (max-aspect-ratio: 1219/685) {
+  main .top-visual .video-box video {
+    width: auto;
+    height: 100%;
+  }
+
+  #background_video {
+    width: auto;
+    height: 100%;
+  }
+}
 footer {
   padding: 6.6666666667vw;
   font-size: 3.8888888889vw;
