--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,9 @@ caption {
   font-family: "arboria", sans-serif;
 }
 
-/* variables */ /* Layout Style*/ /* UI Style(Button, Form, Dialogs */
+/* variables */
+/* Layout Style*/
+/* UI Style(Button, Form, Dialogs */
 .blind {
   overflow: hidden;
   position: absolute;
@@ -372,10 +374,12 @@ caption {
   .mo {
     display: none;
   }
+
   .content, .topArea {
     max-width: 2560px;
     margin: 0 auto;
   }
+
   .topArea {
     padding-top: 36px;
   }
@@ -464,6 +468,7 @@ caption {
     background-color: #00498C;
     color: #fff;
   }
+
   .cont {
     margin: 0 auto;
   }
@@ -664,6 +669,7 @@ caption {
     width: 220px;
     margin-left: 6px;
   }
+
   .bbs_sort .bbs_button {
     height: 44px;
     font-size: 16px;
@@ -682,10 +688,12 @@ caption {
   .bbs_sort .bbs_sortList li + li {
     margin-top: 10px;
   }
+
   .btn-search {
     width: 24px;
     height: 24px;
   }
+
   .search-input {
     padding-right: 24px;
   }
@@ -891,6 +899,7 @@ caption {
     padding: 60px 0 60px;
     font-size: 18px;
   }
+
   .bbs-more li {
     display: flex;
     justify-content: left;
@@ -916,9 +925,11 @@ caption {
     height: 16px;
     right: 30px;
   }
+
   .btn-area {
     margin-top: 50px;
   }
+
   .btn-p {
     width: 312px;
     height: 60px;
@@ -1028,6 +1039,7 @@ caption {
     bottom: 32px;
     left: 36px;
   }
+
   .btn-download {
     height: 24px;
     font-size: 14px;
@@ -1148,6 +1160,7 @@ caption {
     width: 16px;
     height: 16px;
   }
+
   .tbl-title-area {
     margin-bottom: 12px;
   }
@@ -1158,6 +1171,7 @@ caption {
     top: 24px;
     font-size: 14px;
   }
+
   .tbl-finance-wrap + .tbl-title-area {
     margin-top: 100px;
   }
@@ -1306,6 +1320,7 @@ caption {
     width: 100%;
     height: auto;
   }
+
   .core-value {
     padding-bottom: 100px;
   }
@@ -1549,9 +1564,11 @@ caption {
   .quotes img {
     width: 17px;
   }
+
   .sub-desc {
     font-size: 24px;
   }
+
   .ak-value-list {
     display: flex;
     margin: 25px -15px;
@@ -1600,6 +1617,7 @@ caption {
   .ak-value-list.goal li + li::before {
     content: none;
   }
+
   .esg-reflection {
     position: relative;
     overflow: hidden;
@@ -2015,6 +2033,7 @@ caption {
     width: 92px;
     border-top: 1px solid #0D0D0D;
   }
+
   .message-list {
     padding: 100px 0;
     margin-top: 114px;
@@ -2068,6 +2087,7 @@ caption {
     color: #454545;
     word-break: keep-all;
   }
+
   .catchphrase {
     padding: 100px 0;
   }
@@ -2410,6 +2430,7 @@ caption {
   .tbl-title-area + .tbl-scrollable {
     padding-top: 6px;
   }
+
   .tbl-scrollable {
     overflow-x: auto;
     width: 100%;
@@ -2439,6 +2460,7 @@ caption {
   .tbl-scrollable .drag-noti {
     display: none;
   }
+
   .notice-list {
     margin-top: 20px;
     font-size: 14px;
@@ -2447,6 +2469,7 @@ caption {
     padding-left: 34px;
     text-indent: -34px;
   }
+
   .bod-composition {
     padding: 100px 0 80px;
     background: #EFF6FC;
@@ -2741,6 +2764,8 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
     margin-right: 0;
   }
   header .head .btn-show-menu {
+    display: inline-block;
+    margin-left: 144px;
     width: 30px;
     height: 30px;
   }
