--- a/css/main.scss
+++ b/css/main.scss
@@ -508,6 +508,9 @@ header {
             transform: rotate(-45deg);
           }
         }
+        .quick-menu{
+          display:none;
+        }
       }
       nav {
         top: 92px;
@@ -537,6 +540,7 @@ header {
           }
           > li {
             position: relative;
+            height:inherit;
             padding:0 93px;
             background: none;
             border-bottom: none;
@@ -577,11 +581,25 @@ header {
               height: auto;
               > li {
                 a {
-                  display: block;
+                  display: inline-block;
+                  position: relative;
                   height: auto;
                   margin-top: 0;
                   color: #454545;
                   opacity: 0.7;
+                  &:hover{
+                    color:#08A2DC !important;
+                    &::before{
+                      content: '';
+                      display:block;
+                      position: absolute;
+                      bottom: 0;
+                      left:0;
+                      right:0;
+                      height:1px;
+                      background:#08A2DC;
+                    }
+                  }
                 }
                 > ul {
                   margin-top: 30px;
